chore(): fix responsive

--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Nekitori17" />
+    <meta name="description" content="Nekitori17's Official Website" />
+    <meta
+      name="keywords"
+      content="Neki, Nekitori17, Neko, Hikari, Hakari, Nekitori Hakari"
+    />
+    <title>Nekitori17</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="var.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Nekitori17">
-  <meta name="description" content="Nekitori17's Official Website">
-  <meta name="keywords" content="Neki, Nekitori17, Neko, Hikari, Hakari, Nekitori Hakari">
-  <title>Nekitori17</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="var.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-</head>
-
-<body>
-  <header class="header">
-    <div class="title">
-      <img src="/favicon.ico" alt="logo.img">
-      <h1>Nekitori17</h1>
-    </div>
-    <nav class="navigation">
-      <a class="home">.home(<i class="fa-solid fa-house-chimney"></i>)</a>
-      <a class="skill">.skill(<i class="fa-solid fa-code"></i>)</a>
-      <a class="project">.project(<i class="fa-solid fa-diagram-project"></i>)</a>
-    </nav>
-  </header>
-  <div class="container"></div>
-</body>
-<script type="module" src="script.js"></script>
-<script type="text/javascript" src="/js/window-time.js"></script>
-<script src="/cdn_modules/gsap@3.12.5/gsap.min.js"></script>
-<noscript>Ohh no. Your Browser Not Support JavaScript.Bruhhh</noscript>
-
+  <body>
+    <header class="header">
+      <div class="title">
+        <img src="/favicon.ico" alt="logo.img" />
+        <h1>Nekitori17</h1>
+      </div>
+      <nav class="navigation">
+        <a id="home">.home(<i class="fa-solid fa-house-chimney"></i>)</a>
+        <a id="skill">.skill(<i class="fa-solid fa-code"></i>)</a>
+        <a id="project"
+          >.project(<i class="fa-solid fa-diagram-project"></i>)</a
+        >
+      </nav>
+    </header>
+    <div class="container"></div>
+  </body>
+  <script type="module" src="script.js"></script>
+  <script type="text/javascript" src="/js/window-time.js"></script>
+  <script src="/cdn_modules/gsap@3.12.5/gsap.min.js"></script>
+  <noscript>Ohh no. Your Browser Not Support JavaScript.Bruhhh</noscript>
 </html>
