--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -1,76 +1,117 @@
-<link rel="stylesheet" href="/pages/home/style.css">
+<link rel="stylesheet" href="/pages/home/style.css" />
 
-<section class="container">
-  <div class="opening">
-    <img src="/assets/images/nekitori17.jpg" alt="" class="avatar">
-    <div class="user">
-      <h1 class="name">Nekitori Hakari</h1>
-      <h2 class="username">Nekitori17</h2>
-      <p class="currentjob">Junior Developer</p>
+<section class="page-content">
+  <div>
+    <div class="card">
+      <img
+        src="/assets/images/nekitori17.jpg"
+        alt="avatar-img"
+        class="avatar"
+      />
+      <div class="user">
+        <h1 class="name">Nekitori Hakari</h1>
+        <h2 class="username">Nekitori17</h2>
+        <p class="current-job">Junior Developer</p>
+      </div>
     </div>
-  </div>
-  <div class="userinfo">
-    <div class="text-marquee">
-      <p>//Nekitori17</p>
-      <p>//Nekitori17</p>
-      <p>//Nekitori17</p>
-      <p>//Nekitori17</p>
-      <p>//Nekitori17</p>
-      <p>//Nekitori17</p>
-      <p>//Nekitori17</p>
-      <p>//Nekitori17</p>
+    <div class="user-info">
+      <div class="text-marquee">
+        <div class="slider">
+          <div class="text-marquee-track">
+            <p>//Nekitori17</p>
+            <p>//Nekitori17</p>
+            <p>//Nekitori17</p>
+            <p>//Nekitori17</p>
+            <p>//Nekitori17</p>
+            <p>//Nekitori17</p>
+            <p>//Nekitori17</p>
+            <p>//Nekitori17</p>
+          </div>
+        </div>
+      </div>
+      <table>
+        <tr>
+          <td><i class="fa-solid fa-user"></i></td>
+          <td>Nguyen Ngoc Cuong</td>
+        </tr>
+        <tr>
+          <td><i class="fa-solid fa-cat"></i></td>
+          <td>Neko</td>
+        </tr>
+        <tr>
+          <td><i class="fa-solid fa-cake"></i></td>
+          <td>29/09/2009</td>
+        </tr>
+        <tr>
+          <td><i class="fa-solid fa-location-dot"></i></td>
+          <td>Dak Lak, Vietnam</td>
+        </tr>
+        <tr>
+          <td><i class="fa-solid fa-envelopes-bulk"></i></td>
+          <td>
+            <a href="mailto:cuongnguyen286641@gmail.com"
+              >cuongnguyen286641@gmail.com</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td><i class="fa-solid fa-earth-americas"></i></td>
+          <td>English, Vietnamese</td>
+        </tr>
+        <tr>
+          <td><i class="fa-solid fa-clock fa-lg"></i></td>
+          <td><span class="timer"></span><var>ICT (+7)</var></td>
+        </tr>
+      </table>
     </div>
-    <table>
-      <tr>
-        <td><i class="fa-solid fa-user"></i></td>
-        <td>Nguyen Ngoc Cuong</td>
-      </tr>
-      <tr>
-        <td><i class="fa-solid fa-cat"></i></td>
-        <td>Neko</td>
-      </tr>
-      <tr>
-        <td><i class="fa-solid fa-cake"></i></td>
-        <td>29/09/2009</td>
-      </tr>
-      <tr>
-        <td><i class="fa-solid fa-location-dot"></i></td>
-        <td>Dak Lak, Vietnam</td>
-      </tr>
-      <tr>
-        <td><i class="fa-solid fa-envelopes-bulk"></td>
-        <td><a href="mailto:cuongnguyen286641@gmail.com">cuongnguyen286641@gmail.com</a></td>
-      </tr>
-      <tr>
-        <td><i class="fa-solid fa-earth-americas"></td>
-        <td>English, Vietnamese</td>
-      </tr>
-      <tr>
-        <td><i class="fa-solid fa-clock fa-lg"></i></td>
-        <td>
-          <span class="timer"></span><var>ICT (+7)</var>
-        </td>
-      </tr>
-    </table>
-  </div>
-  <img src="/assets/images/developer.png" alt="coding-svg" class="coder_image">
-  <div class="linksocial">
-    <div class="facebook">
-      <a href="https://www.facebook.com/nekitorihakari" class="link"><i class="fa-brands fa-facebook"></i></a>
-      <p class="tooltip"><a href="https://www.facebook.com/nekitorihakari" class="link">Nekitori Hakari</a></p>
-    </div>
-    <div class="youtube">
-      <a href="https://youtube.com/@plinkatsu" class="link"><i class="fa-brands fa-youtube"></i></a>
-      <p class="tooltip"><a href="https://youtube.com/@plinkatsu" class="link">@plinkatsu</a></p>
-    </div>
-    <div class="discord">
-      <a href="https://discord.com/users/1032626223307829289" class="link"><i class="fa-brands fa-discord"></i></a>
-      <p class="tooltip"><a href="https://discord.com/users/1032626223307829289" class="link">.nekitorihakari</a></p>
-    </div>
-    <div class="github">
-      <a href="https://github.com/Nekitori17" class="link"><i class="fa-brands fa-github"></i></a>
-      <p class="tooltip"><a href="https://github.com/Nekitori17" class="link">Nekitori17</a></p>
+    <img
+      src="/assets/images/developer.png"
+      alt="coding-svg"
+      class="coder-image"
+    />
+    <div class="link-social">
+      <div class="facebook">
+        <a href="https://www.facebook.com/nekitorihakari" class="link"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <p class="tooltip">
+          <a href="https://www.facebook.com/nekitorihakari" class="link"
+            >Nekitori Hakari</a
+          >
+        </p>
+      </div>
+      <div class="youtube">
+        <a href="https://youtube.com/@plinkatsu" class="link"
+          ><i class="fa-brands fa-youtube"></i
+        ></a>
+        <p class="tooltip">
+          <a href="https://youtube.com/@plinkatsu" class="link">@plinkatsu</a>
+        </p>
+      </div>
+      <div class="discord">
+        <a href="https://discord.com/users/1032626223307829289" class="link"
+          ><i class="fa-brands fa-discord"></i
+        ></a>
+        <p class="tooltip">
+          <a href="https://discord.com/users/1032626223307829289" class="link"
+            >.nekitorihakari</a
+          >
+        </p>
+      </div>
+      <div class="github">
+        <a href="https://github.com/Nekitori17" class="link"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <p class="tooltip">
+          <a href="https://github.com/Nekitori17" class="link">Nekitori17</a>
+        </p>
+      </div>
     </div>
   </div>
 </section>
-<script id="pageScripts" type="text/javascript" src="/pages/home/script.js"></script>
+
+<script
+  id="pageScripts"
+  type="text/javascript"
+  src="/pages/home/script.js"
+></script>
