--- a/404.html
+++ b/404.html
@@ -1,75 +1,149 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Error 404 - Page Not Found</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Inconsolata");
 
-<head>
-  <meta charset="UTF-8">
-  <title>Error 404 - Page Not Found</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f0f0f0;
-      margin: 0;
-      text-align: center;
-      color: #333;
-    }
+      html {
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+      }
 
-    .container {
-      max-width: 600px;
-      padding: 30px;
-      background: white;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-    }
+      body {
+        box-sizing: border-box;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+        background-color: #000000;
+        background-image: radial-gradient(#11581e, #041607),
+          url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
+        background-repeat: no-repeat;
+        background-size: cover;
+        font-family: "Inconsolata", Helvetica, sans-serif;
+        font-size: 1.5rem;
+        color: rgba(128, 255, 128, 0.8);
+        text-shadow: 0 0 1ex rgba(51, 255, 51, 1),
+          0 0 2px rgba(255, 255, 255, 0.8);
+      }
 
-    .container h1 {
-      font-size: 100px;
-      margin: 0;
-      color: #ff6b6b;
-    }
+      .noise {
+        pointer-events: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-image: url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
+        background-repeat: no-repeat;
+        background-size: cover;
+        z-index: -1;
+        opacity: 0.02;
+      }
 
-    .container h2 {
-      font-size: 24px;
-      margin: 10px 0;
-    }
+      .overlay {
+        pointer-events: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: repeating-linear-gradient(
+          180deg,
+          rgba(0, 0, 0, 0) 0,
+          rgba(0, 0, 0, 0.3) 50%,
+          rgba(0, 0, 0, 0) 100%
+        );
+        background-size: auto 4px;
+        z-index: 1;
+      }
 
-    .container p {
-      font-size: 18px;
-      margin: 20px 0;
-    }
+      .overlay::before {
+        content: "";
+        pointer-events: none;
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(
+          0deg,
+          transparent 0%,
+          rgba(32, 128, 32, 0.2) 2%,
+          rgba(32, 128, 32, 0.8) 3%,
+          rgba(32, 128, 32, 0.2) 3%,
+          transparent 100%
+        );
+        background-repeat: no-repeat;
+        animation: scan 7.5s linear 0s infinite;
+      }
 
-    .container a {
-      display: inline-block;
-      padding: 10px 20px;
-      background: #ff6b6b;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background 0.3s;
-    }
+      @keyframes scan {
+        0% {
+          background-position: 0 -100vh;
+        }
+        35%,
+        100% {
+          background-position: 0 100vh;
+        }
+      }
 
-    .container a:hover {
-      background: #ff4b4b;
-    }
+      .terminal {
+        box-sizing: inherit;
+        position: absolute;
+        height: 100%;
+        width: 1000px;
+        max-width: 100%;
+        padding: 4rem;
+        text-transform: uppercase;
+      }
 
-    .container img {
-      max-width: 100%;
-      height: auto;
-      margin: 20px 0;
-    }
-  </style>
-</head>
+      .output {
+        color: rgba(128, 255, 128, 0.8);
+        text-shadow: 0 0 1px rgba(51, 255, 51, 0.4),
+          0 0 2px rgba(255, 255, 255, 0.8);
+      }
 
-<body>
-  <div class="container">
-    <h1>404</h1>
-    <h2>Page not found</h2>
-    <p>Sorry, the page you are looking for does not exist. You may have entered the wrong URL or the page has been removed.</p>
-    <a href="/">Go back to Home</a>
-  </div>
-</body>
+      .output::before {
+        content: "> ";
+      }
 
+      a {
+        color: #fff;
+        text-decoration: none;
+      }
+
+      a::before {
+        content: "[";
+      }
+
+      a::after {
+        content: "]";
+      }
+
+      .errorcode {
+        color: white;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="noise"></div>
+    <div class="overlay"></div>
+    <div class="terminal">
+      <h1>Error <span class="errorcode">404</span></h1>
+      <p class="output">
+        The page you are looking for might have been removed, had its name
+        changed or is temporarily unavailable.
+      </p>
+      <p class="output">
+        Please try to <a onclick="history.back()" href="">go back</a> or
+        <a href="/#home">return to the homepage</a>.
+      </p>
+      <p class="output">Good luck.</p>
+    </div>
+  </body>
+  <script>
+
+  </script>
 </html>
