--- a/pages/project/index.html
+++ b/pages/project/index.html
@@ -1,5 +1,8 @@
-<link rel="stylesheet" href="/pages/project/style.css">
+<link rel="stylesheet" href="/pages/project/style.css" />
 
-<section class="container">
-</section>
-<script id="pageScripts" type="text/javascript" src="/pages/project/script.js"></script>
+<section class="container"></section>
+<script
+  id="pageScripts"
+  type="text/javascript"
+  src="/pages/project/script.js"
+></script>
