--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -10,7 +10,7 @@
       />
       <div class="user">
         <h1 class="name">Nekitori Hakari</h1>
-        <h2 class="username">Nekitori17</h2>
+        <h2 class="username">Nekitori17 | Plinkatsu</h2>
         <p class="current-job">Junior Developer</p>
       </div>
     </div>
