--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Nekitori17</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="var.css" />
+    <link id="color-palette" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -29,15 +30,19 @@
       </div>
       <nav class="navigation">
         <a id="home">.home(<i class="fa-solid fa-house-chimney"></i>)</a>
-        <a id="skill">.skill(<i class="fa-solid fa-code"></i>)</a>
-        <a id="project"
-          >.project(<i class="fa-solid fa-diagram-project"></i>)</a
+        <a id="works">.works(<i class="fa-solid fa-briefcase"></i>)</a>
+        <a id="skills">.skills(<i class="fa-solid fa-code"></i>)</a>
+        <a id="projects"
+          >.projects(<i class="fa-solid fa-diagram-project"></i>)</a
         >
+        <a id="about">.about(<i class="fa-solid fa-circle-info"></i>)</a>
       </nav>
     </header>
+    <div class="dot-blur"></div>
     <main class="container"></main>
     <script type="module" src="/script.js"></script>
     <script src="/js/utils.js"></script>
+    <script src="/js/EventBus.js"></script>
     <script src="/cdn_modules/gsap@3.12.5/gsap.min.js"></script>
   </body>
 </html>
