--- a/index.html
+++ b/index.html
@@ -30,15 +30,18 @@
       </div>
       <nav class="navigation">
         <a id="home">.home(<i class="fa-solid fa-house-chimney"></i>)</a>
-        <a id="works">.works(<i class="fa-solid fa-briefcase"></i>)</a>
         <a id="skills">.skills(<i class="fa-solid fa-code"></i>)</a>
+        <a id="works">.works(<i class="fa-solid fa-briefcase"></i>)</a>
         <a id="projects"
           >.projects(<i class="fa-solid fa-diagram-project"></i>)</a
         >
         <a id="about">.about(<i class="fa-solid fa-circle-info"></i>)</a>
       </nav>
     </header>
-    <div class="dot-blur"></div>
+    <div class="dot-blur">
+      <div class="dot-blur-1"></div>
+      <div class="dot-blur-2"></div>
+    </div>
     <main class="container"></main>
     <script type="module" src="/script.js"></script>
     <script src="/js/utils.js"></script>
