--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="/pages/skill/style.css" />
+<link rel="stylesheet" href="/pages/about/style.css" />
 
 <section class="container"></section>
 <script
   id="pageScripts"
   type="text/javascript"
-  src="/pages/project/script.js"
+  src="/pages/about/script.js"
 ></script>
