--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -1,8 +1,4 @@
 <link rel="stylesheet" href="/pages/projects/style.css" />
 
 <section class="container"></section>
-<script
-  id="pageScripts"
-  type="text/javascript"
-  src="/pages/projects/script.js"
-></script>
+<script src="/pages/projects/script.js"></script>
