--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -1,8 +1,4 @@
 <link rel="stylesheet" href="/pages/about/style.css" />
 
 <section class="container"></section>
-<script
-  id="pageScripts"
-  type="text/javascript"
-  src="/pages/about/script.js"
-></script>
+<script src="/pages/about/script.js"></script>
