--- a/404.html
+++ b/404.html
@@ -137,13 +137,15 @@
         changed or is temporarily unavailable.
       </p>
       <p class="output">
-        Please try to <a onclick="history.back()" href="">go back</a> or
+        Please try to
+        <a href="#" onclick="event.preventDefault(); history.back();"
+          >go back</a
+        >
+        or
         <a href="/#home">return to the homepage</a>.
       </p>
       <p class="output">Good luck.</p>
     </div>
   </body>
-  <script>
-
-  </script>
+  <script></script>
 </html>
