--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       content="Neki, Nekitori17, Neko, Hikari, Hakari, Nekitori Hakari"
     />
     <title>Nekitori17</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="var.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/globalVariable.css" />
     <link id="color-palette" rel="stylesheet" />
     <link
       rel="stylesheet"
@@ -37,14 +37,8 @@
         <a id="about">.about(<i class="fa-solid fa-circle-info"></i>)</a>
       </nav>
     </header>
-    <div class="dot-blur">
-      <div class="dot-blur-1"></div>
-      <div class="dot-blur-2"></div>
-    </div>
     <main class="container"></main>
-    <script type="module" src="/script.js"></script>
-    <script src="/js/utils.js"></script>
-    <script src="/js/EventBus.js"></script>
-    <script src="/cdn_modules/gsap@3.12.5/gsap.min.js"></script>
+    <script type="module" src="/bootstrap.js"></script>
+    <script src="/libs/gsap@3.12.5/gsap.min.js"></script>
   </body>
 </html>
