💄 style(ui): implement animated background design
- add assets for grid pattern and fractal noise (noise.svg, pattern.svg)
- apply dynamic background pattern movement animation
- introduce noise and radial gradient overlays for visual depth
- ensure responsive background sizing across viewports

♻️ refactor(deps): cleanup html and dependencies

- remove unused gsap library script tag from index.html
- update html doctype to standard declaration
- minor formatting adjustment in bootstrap.js

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -39,6 +39,5 @@
     </header>
     <main class="container"></main>
     <script type="module" src="/bootstrap.js"></script>
-    <script src="/libs/gsap@3.12.5/gsap.min.js"></script>
   </body>
 </html>
