--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
     />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="preload" href="/favicon.ico" as="image" />
+
+    <style>
+      html {
+        background: #050505;
+      }
+      body {
+        visibility: hidden;
+      }
+      body.palette-ready {
+        visibility: visible;
+      }
+    </style>
   </head>
   <body>
     <header class="header">
@@ -39,5 +51,150 @@
     </header>
     <main class="container"></main>
     <script type="module" src="/bootstrap.js"></script>
+
+    <div id="boot-loading">
+      <div class="track">
+        <div class="lane"></div>
+        <div class="lane"></div>
+        <div class="lane"></div>
+        <div class="lane"></div>
+        <div class="hit-line"></div>
+      </div>
+      <div class="perfect">PERFECT</div>
+
+      <style>
+        #boot-loading {
+          position: fixed;
+          inset: 0;
+          background: #050505;
+          z-index: 9999;
+          display: grid;
+          place-items: center;
+          pointer-events: none;
+        }
+
+        .track {
+          position: relative;
+          width: 160px;
+          height: 200px;
+          display: grid;
+          grid-template-columns: repeat(4, 1fr);
+          background: rgba(255, 255, 255, 0.04);
+          overflow: hidden;
+        }
+
+        .lane {
+          position: relative;
+          border-left: 1px solid rgba(255, 255, 255, 0.08);
+        }
+        .lane:first-child {
+          border-left: none;
+        }
+
+        .hit-line {
+          position: absolute;
+          left: 0;
+          right: 0;
+          bottom: 20px;
+          height: 2px;
+          background: rgba(255, 255, 255, 0.45);
+        }
+
+        .note {
+          position: absolute;
+          top: -18px;
+          height: 14px;
+          animation: fall 1.1s linear forwards;
+        }
+
+        .note.c1 {
+          background: linear-gradient(90deg, #ffb703, #4cc9f0);
+        }
+        .note.c2 {
+          background: linear-gradient(90deg, #ff7a7a, #5eead4);
+        }
+        .note.c3 {
+          background: linear-gradient(90deg, #ff9f1c, #60a5fa);
+        }
+        .note.c4 {
+          background: linear-gradient(90deg, #f72585, #22d3ee);
+        }
+
+        @keyframes fall {
+          to {
+            top: 120%;
+          }
+        }
+
+        .perfect {
+          position: absolute;
+          bottom: 120px;
+          font-family: monospace;
+          letter-spacing: 0.35em;
+          color: #e6f0ff;
+          opacity: 0;
+        }
+        .perfect.show {
+          animation: pop 0.3s ease-out forwards;
+        }
+        @keyframes pop {
+          to {
+            opacity: 1;
+          }
+        }
+
+        .lane.flash::after {
+          content: "";
+          position: absolute;
+          inset: auto 0 0 0;
+          height: 70%;
+          background: linear-gradient(
+            to top,
+            rgba(120, 200, 255, 0.45),
+            rgba(255, 180, 120, 0.25),
+            transparent
+          );
+          animation: flash 0.25s ease-out forwards;
+        }
+        @keyframes flash {
+          to {
+            opacity: 0;
+          }
+        }
+      </style>
+
+      <script>
+        (() => {
+          const lanes = [...document.querySelectorAll(".lane")];
+          const track = document.querySelector(".track");
+          const perfect = document.querySelector(".perfect");
+          const laneWidth = track.clientWidth / 4;
+
+          function spawnNote() {
+            const key = Math.floor(Math.random() * 4);
+            const lane = lanes[key];
+
+            const note = document.createElement("div");
+            note.className = `note c${key + 1}`;
+            note.style.left = `${key * laneWidth + 2}px`;
+            note.style.width = `${laneWidth - 4}px`;
+
+            track.appendChild(note);
+
+            setTimeout(() => {
+              lane.classList.add("flash");
+              perfect.classList.remove("show");
+              void perfect.offsetWidth;
+              perfect.classList.add("show");
+              setTimeout(() => lane.classList.remove("flash"), 200);
+            }, 850);
+
+            note.addEventListener("animationend", () => note.remove());
+          }
+
+          setInterval(spawnNote, 260);
+        })();
+      </script>
+    </div>
   </body>
 </html>
